# LLMStart_AI-Driven_02

./: .coverage  .dockerignore  .env.example  .gitignore  DEPLOY.md  DOCKER.md  Dockerfile  Makefile  PROJECT_COMPLETE.md  README.md  build.cmd  deploy-cloud.cmd  deploy.cmd  dev.cmd  docker-compose.yml  env.example  install.cmd  pyproject.toml  railway.json  requirements.txt  run.cmd  run.ps1  tasklist.md  test.cmd  test_container_init.py  vision.md
.cursor/rules/: conventions.mdc  workflow.mdc
.github/workflows/: deploy-render.yml  deploy.yml  docker-test.yml  test.yml
doc/: product_idea.md
prompts/: system.txt
src/: main.py
src/bot/: __init__.py  handlers.py
src/config/: settings.py
src/llm/: __init__.py  client.py
src/multimodal/: __init__.py  image_processor.py
src/utils/: history.py  logger.py  validators.py
tests/: __init__.py  conftest.py  test_bot_handlers.py  test_config.py  test_llm_client.py  test_utils.py
